TL-26289: Revert "TL-22634 / MDL-57991 media: Prevent mediaplayer taking up too much space"
This reverts commit 7d867742a38c145c177901c0a56190e3b86b7315.

--- a/server/filter/mediaplugin/styles.css
+++ b/server/filter/mediaplugin/styles.css
@@ -17,8 +17,3 @@
 .mediaplugin > div {
     margin: auto;
 }
-
-/* Make media plugin behave properly in mod summaries and labels */
-.mod-indent-outer .mediaplugin {
-    display: table-cell;
-}
